# taskbot

./: .gitignore  AGENTS.md  README.md  VOICE_BUG.md  build.gradle.kts  build_apk.sh  config.toml  gradle.properties  install.sh  justfile  network-setup  settings.gradle.kts
.beads/: .beads-credential-key  metadata.json
androidApp/: build.gradle.kts
androidApp/src/main/: AndroidManifest.xml
androidApp/src/main/java/com/hermes/android/: MainActivity.kt
androidApp/src/main/res/drawable/: ic_launcher.xml
app/: build.gradle.kts
app/src/androidMain/kotlin/com/hermes/ui/: MyCaptureActivity.kt  PlatformLog.android.kt  QrScanner.kt  Storage.kt
app/src/androidMain/kotlin/com/hermes/voice/: HermesVoiceService.kt  VoiceManager.android.kt
app/src/commonMain/kotlin/com/hermes/connection/: ConnectionManager.kt  WebSocketClient.kt
app/src/commonMain/kotlin/com/hermes/history/: HistorySerializer.kt  SyncQueue.kt
app/src/commonMain/kotlin/com/hermes/llm/: GeminiApi.kt  (+2 more)
app/src/jsMain/resources/: index.html
docs/plans/: 2026-03-18-initial-token-pairing.md  2026-03-18-tools-and-history.md
e2e/: playwright.config.js
e2e/playwright-report/: index.html
e2e/test-results/: .last-run.json
e2e/tests/: chat.spec.js  connection.spec.js  threads.spec.js  tools.spec.js
server/: Cargo.toml  config.toml
server/src/: auth.rs  config.rs  lib.rs  pairing_store.rs
server/src/pkm/: archival.rs  db.rs  fs.rs  history.rs  indexer.rs  mod.rs  search.rs  sessions.rs  threads.rs  watcher.rs
server/src/ws/: history_handlers.rs  kb_handlers.rs  mod.rs  thread_handlers.rs
(+21 files in other folders)
