[package]
name = "tx"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
notify = "6"
uuid = { version = "1", features = ["v4", "fast-rng", "macro-diagnostics"] }
base64 = "0.22"
local-ip-address = "0.6"
clap = { version = "4", features = ["derive"] }
futures-util = { version = "0.3", features = ["sink"] }
walkdir = "2.5.0"
qr2term = "0.3.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tracing-appender = "0.2.4"
chrono = "0.4.44"
sysinfo = "0.38.4"
